<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/myDataFragment"
            android:title="@string/menu_myData"
            android:iconTint="@color/mainColor"
            android:icon="@drawable/ic_ant_design_user_outlined"/>
        <item
            android:id="@+id/viewPagerFragment"
            android:title="@string/menu_myOrders"
            app:iconTint="@color/mainColor"
            android:icon="@drawable/ic_eva_shopping_bag_outline"/>
        <item
            android:id="@+id/navigation_favourite"
            android:title="@string/menu_favourite"
            android:iconTint="@color/mainColor"
            android:icon="@drawable/ic_ant_design_heart_outlined"/>
        <item
            android:id="@+id/messagesFragment"
            android:title="@string/menu_message"
            android:iconTint="@color/mainColor"
            android:icon="@drawable/ic_eva_message_square_outline"/>
        <item
            android:id="@+id/menu_sale1"
            android:title="@string/menu_sale"
            android:iconTint="@color/mainColor"
            android:icon="@drawable/ic_whh_sale"/>
        <item
            android:id="@+id/menu_promotion1"
            android:title="@string/menu_promotion"
            android:iconTint="@color/mainColor"
            android:icon="@drawable/ic_ri_magic_line"/>
        <item
            android:id="@+id/menu_settings1"
            android:title="@string/menu_setting"
            android:iconTint="@color/mainColor"
            android:icon="@drawable/ic_carbon_settings"/>
        <item
            android:id="@+id/menu_logOut1"
            android:title="@string/menu_logout"
            android:iconTint="@color/mainColor"
            android:icon="@drawable/ic_mdi_exit_to_app"/>
    </group>
</menu>