<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bottomsheet_filter"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_rectangle_19"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/sortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textFontWeight="600"
        android:text="@string/text_sort_by"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        app:layout_constraintTop_toBottomOf="@id/sortBy"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/sort1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:paddingStart="16dp"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textAlignment="textStart"
        android:text="@string/filter_the_newest"
        android:background="@drawable/item_button_filter"
        android:button="@null"/>

    <RadioButton
        android:id="@+id/sort2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:text="@string/text_filter_popular"
        android:textColor="@color/textColor"
        android:background="@drawable/item_button_filter"
        android:button="@null"/>

    <RadioButton
        android:id="@+id/sort3"
        android:paddingStart="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:text="@string/text_filter_name"
        android:textColor="@color/textColor"
        android:background="@drawable/item_button_filter"
        android:button="@null"/>

    <RadioButton
        android:id="@+id/sort4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:text="@string/text_filter_low_to_high"
        android:textColor="@color/textColor"
        android:background="@drawable/item_button_filter"
        android:paddingStart="16dp"
        android:button="@null"/>

    <RadioButton
        android:id="@+id/sort5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:paddingStart="16dp"
        android:textAlignment="textStart"
        android:text="@string/text_filter_high_to_low"
        android:textColor="@color/textColor"
        android:background="@drawable/item_button_filter"
        android:button="@null"/>
</RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>