<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="?attr/actionBarSize"
        app:layoutDescription="@xml/activity_login_xml_constraintlayout_scene">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="77dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="78dp"
            android:src="@drawable/logotype"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_auth"
            android:layout_width="149dp"
            android:layout_height="40dp"
            android:layout_marginStart="113dp"
            android:layout_marginTop="52dp"

            android:layout_marginEnd="113dp"
            android:fontFamily="@font/nunito"
            android:text="@string/auth"
            android:textColor="@color/textColor"
            android:textSize="@dimen/paragraph"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <TextView
            android:id="@+id/text_for_auth"
            android:layout_width="255dp"
            android:layout_height="66dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/nunito_light"
            android:text="@string/info_auth"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="@dimen/mainText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_auth" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/border_lines"
            android:fontFamily="@font/nunito"
            android:hint="@string/phone_number"
            android:inputType="number|phone"
            android:textAlignment="center"
            android:textColorHint="@color/textColor"
            android:textSize="@dimen/mainText"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_for_auth" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sms_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/border_lines"
            android:fontFamily="@font/nunito"
            android:hint="@string/input_sms"
            android:inputType="number|phone"
            android:textAlignment="center"
            android:textColorHint="@color/textColor"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/phone_number" />


        <TextView
            android:id="@+id/one_more_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/one_more_sms"
            android:textColor="@color/textColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_number" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/getSmsButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/get_sms_button"
            app:backgroundTint="@color/mainColor"
            android:text="@string/get_sms"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_number" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/authorize"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/get_sms_button"
            android:text="@string/authorize1"
            android:textAllCaps="false"
            app:backgroundTint="@color/mainColor"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@+id/sms_input"
            tools:layout_editor_absoluteX="37dp" />


    </androidx.constraintlayout.motion.widget.MotionLayout>
</ScrollView>