<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/cardView_clothe"
    android:layout_width="167dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/text_sale"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="16dp"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="16dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="15dp"
    app:cardBackgroundColor="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/carrot_jmp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sale_percent"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:background="@drawable/card_view_percent"
            android:text="15%"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/mainColor"
            android:src="@drawable/heart_colored"
            android:backgroundTint="@color/white"
            tools:layout_editor_absoluteX="204dp"
            tools:layout_editor_absoluteY="325dp"
            app:layout_constraintTop_toTopOf="@id/image"
            app:layout_constraintEnd_toEndOf="@id/image"/>


        <RatingBar
            android:id="@+id/ratingBar_small"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:numStars="5"
            android:progressTint="#FFBA49"
            android:rating="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <TextView
            android:id="@+id/stroked_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="1dp"
            android:alpha="0.5"
            android:text="@string/price_with_stroke"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_name" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="12dp"
            android:text="@string/price_without_stroke"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/productName"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brand_name" />

        <TextView
            android:id="@+id/brand_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:alpha="0.5"
            android:text="@string/brandName"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar_small" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>